refactor: Error